--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev": "concurrently \"npm run frontend\" \"npm run backend\""
   },
   "dependencies": {
-    "concurrently": "^9.1.2"
+    "concurrently": "^9.1.2",
+    "react-router-dom": "^7.6.0"
   }
 }
