--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "chrome-aws-lambda": "^10.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
-    "puppeteer": "^24.9.0"
+    "puppeteer": "^24.9.0",
+    "puppeteer-core": "^10.1.0"
   }
 }
