--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dev": "concurrently \"npm run frontend\" \"npm run backend\""
   },
   "dependencies": {
+    "chrome-aws-lambda": "^10.1.0",
     "concurrently": "^9.1.2",
+    "puppeteer-core": "^10.1.0",
     "react-router-dom": "^7.6.0"
   }
 }
