--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "dev": "concurrently \"npm run frontend\" \"npm run backend\""
   },
   "dependencies": {
-    "chrome-aws-lambda": "^10.1.0",
     "concurrently": "^9.1.2",
-    "puppeteer-core": "^10.1.0",
+    "puppeteer": "^24.9.0",
     "react-router-dom": "^7.6.0"
   }
 }
