--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,20 +1,25 @@
-FROM node:18-bullseye
+# Use official Node image
+FROM node:18-slim
 
-# Install Chromium
-RUN apt-get update && apt-get install -y chromium
+# Install dependencies
+RUN apt-get update && \
+    apt-get install -y wget gnupg ca-certificates fonts-liberation libappindicator3-1 libasound2 libatk-bridge2.0-0 libatk1.0-0 libcups2 libdbus-1-3 \
+        libgdk-pixbuf2.0-0 libnspr4 libnss3 libx11-xcb1 libxcomposite1 libxdamage1 libxrandr2 xdg-utils --no-install-recommends && \
+    rm -rf /var/lib/apt/lists/*
 
-# Create app directory
+# Install Chrome
+RUN wget -q https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb && \
+    dpkg -i google-chrome-stable_current_amd64.deb || apt-get -fy install && \
+    rm google-chrome-stable_current_amd64.deb
+
+# Set working directory
 WORKDIR /app
 
-# Copy package files and install deps
-COPY package*.json ./
-RUN npm install
-
-# Copy app source
+# Copy app files
 COPY . .
 
-# Expose port
-EXPOSE 3000
+# Install Node dependencies
+RUN npm install
 
-# Start app
-CMD ["node", "index.js"]
+# Start server
+CMD ["node", "server.js"]
